src/platform-data-model/application-log/objects/Application_Log__c/fields/Application_Domain__c.field-meta.xml
<CustomField>
    <fullName>Application_Domain__c</fullName>
    <description>Specifies which area of the application the application log is connected to.</description>
    <label>Application Domain</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Application_Domain</valueSetName>
    </valueSet>
</CustomField>