src/platform-data-model/application-log/objects/Application_Log__c/fields/CRM_Ready_for_Deletion__c.field-meta.xml
<CustomField>
    <fullName>CRM_Ready_for_Deletion__c</fullName>
    <description>Formula field used in the deletion policy for the application log. All logs older than one month are to be deleted.</description>
    <formula>OR(DateValue(CreatedDate) &lt; ADDMONTHS(TODAY(),-1),
			AND(DateValue(CreatedDate) &lt; TODAY() - 2, Log_Level__c == &apos;Info&apos;)
			)
			
/*Deletes all info logs older than two days and all other types older than last month */</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ready for Deletion</label>
    <type>Checkbox</type>
</CustomField>