src/platform-data-model/application-log/objects/Application_Log__c/fields/Log_Level__c.field-meta.xml
<CustomField>
    <fullName>Log_Level__c</fullName>
    <label>Log Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>