src/platform-data-model/application-log/objects/Application_Log__c/fields/Pay_Load__c.field-meta.xml
<CustomField>
    <fullName>Pay_Load__c</fullName>
    <label>Pay Load</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>