src/platform-data-model/application-log/objects/Application_Log__c/fields/Referrence_ID__c.field-meta.xml
<CustomField>
    <fullName>Referrence_ID__c</fullName>
    <label>Referrence ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>