src/platform-data-model/application-log/objects/Application_Log__c/fields/Referrence_Info__c.field-meta.xml
<CustomField>
    <fullName>Referrence_Info__c</fullName>
    <label>Referrence Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>