src/platform-data-model/application-log/objects/Application_Log__c/fields/Source_Class__c.field-meta.xml
<CustomField>
    <fullName>Source_Class__c</fullName>
    <label>Source Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>