src/platform-data-model/application-log/objects/Application_Log__c/fields/Source_Function__c.field-meta.xml
<CustomField>
    <fullName>Source_Function__c</fullName>
    <label>Source Function</label>
    <length>255</length>
    <type>Text</type>
</CustomField>