src/platform-data-model/application-log/objects/Application_Log__c/fields/Time_Taken__c.field-meta.xml
<CustomField>
    <fullName>Time_Taken__c</fullName>
    <description>Time Taken (In ms)</description>
    <label>Time Taken</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>