src/platform-data-model/application-log/objects/Application_Log__c/fields/UUID__c.field-meta.xml
<CustomField>
    <fullName>UUID__c</fullName>
    <description>Field to contain a UUID generated by the logger framework</description>
    <externalId>true</externalId>
    <label>UUID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>