src/platform-data-model/application-log/objects/Application_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Source_Class__c</columns>
    <columns>Source_Function__c</columns>
    <columns>Log_Level__c</columns>
    <columns>Log_Message__c</columns>
    <columns>Pay_Load__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>