src/platform-data-model/application-log/objects/Application_Log__c/listViews/Logs_This_Week.listView-meta.xml
<ListView>
    <fullName>Logs_This_Week</fullName>
    <columns>NAME</columns>
    <columns>Source_Class__c</columns>
    <columns>Source_Function__c</columns>
    <columns>Log_Level__c</columns>
    <columns>Log_Message__c</columns>
    <columns>Pay_Load__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>Logs This Week</label>
</ListView>